AGENT=security-specialist: Fix critical vulnerabilities and implement security headers - Issue #59
- Update Next.js from 14.2.5 to 14.2.33 to fix critical security vulnerabilities
- Update eslint-config-next to fix glob CLI command injection vulnerability
- Implement comprehensive security middleware with CSP, HSTS, and security headers
- Enhance database RLS policies for proper user isolation across all tables
- Add PII redaction utility for agent logs to protect user privacy
- Create security documentation with implementation guidelines
- Resolve all npm audit vulnerabilities (0 vulnerabilities found)
- Build process verified and working correctly

Addresses critical security issues outlined in Issue #59 and PR #20

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@supabase/supabase-js": "^2.39.0",
     "@types/js-yaml": "^4.0.9",
     "clsx": "^2.1.1",
     "js-yaml": "^4.1.1",
-    "next": "14.2.5",
+    "next": "14.2.33",
     "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
@@ -29,8 +30,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.22",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^16.0.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
