--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
     "clsx": "^2.1.1",
     "googleapis": "^166.0.0",
     "js-yaml": "^4.1.1",
-    "next": "14.2.33",
+    "next": "14.2.35",
     "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.4.0",
-    "trello": "^0.11.0"
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
