--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "@types/js-yaml": "^4.0.9",
     "clsx": "^2.1.1",
-    "googleapis": "^166.0.0",
+    "googleapis": "^169.0.0",
     "js-yaml": "^4.1.1",
     "next": "14.2.35",
     "openai": "^4.20.1",
@@ -37,6 +37,7 @@
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.6.1",
@@ -45,7 +46,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.22",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.35",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
