--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "clsx": "^2.1.1",
     "googleapis": "^169.0.0",
     "js-yaml": "^4.1.1",
-    "next": "^16.1.1",
+    "next": "14.2.35",
     "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
@@ -46,13 +46,16 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.22",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "^16.1.1",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.35",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "glob": "^10.5.0"
   }
 }
