--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "glob": "10.5.0"
   }
 }
