--- a/config/.env.example
+++ b/config/.env.example
@@ -49,3 +49,9 @@ GITHUB_REDIRECT_URI=
 
 # Application Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Admin Configuration
+ADMIN_API_KEY=your-admin-api-key-for-protected-routes
+
+# CORS Configuration (comma-separated list of allowed origins)
+ALLOWED_ORIGINS=http://localhost:3000,https://yourdomain.com
