--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,9 +11,14 @@ name = "ai-first"
 [env.staging] 
 name = "ai-first-staging"
 
-# Environment variables (these will be set via Cloudflare dashboard or wrangler secrets)
-[vars]
-NEXT_PUBLIC_APP_URL = "https://ideaflow.ai"
+# Environment variables (set via Cloudflare dashboard or GitHub Actions secrets)
+# DO NOT hardcode sensitive values here - use environment-specific sections below
+
+[env.production.vars]
+# Set via Cloudflare dashboard: NEXT_PUBLIC_APP_URL
+
+[env.staging.vars]
+# Set via Cloudflare dashboard: NEXT_PUBLIC_APP_URL
 
 # For Cloudflare Pages deployment
 # Build command should be: npm run build
