fix: resolve TypeScript ES2017 compatibility and security issues
- Update tsconfig.json target from ES2015 to ES2017 to support Object.entries()
- Update lib from es2015 to es2017 for API compatibility
- Fix hardcoded test secrets in jest.setup.js to use env variable fallbacks
- Add security comments warning about credential management

Fixes #889, #895

AGENT=BugFixer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "es2015"
-    ],
+    "lib": ["dom", "dom.iterable", "es2017"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -16,7 +12,7 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "incremental": true,
-    "target": "ES2015",
+    "target": "ES2017",
     "downlevelIteration": true,
     "plugins": [
       {
@@ -25,9 +21,7 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
   },
   "include": [
@@ -38,7 +32,5 @@
     "tests/_test-env.d.ts",
     ".next/dev/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
